@@ -1,3 +1,9 @@
+2000-05-31  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>
+
+	* 11696: Src/params.c: fix bugs reported in 10990 localising
+	readonly specials if they were integer or hashes that needed
+	copying.
+
 2000-05-31  Sven Wischnowsky  <wischnow@zsh.org>
 
 	* 11688: Completion/Commands/_complete_debug,
